--- a/assets/sass/themes/_dark.scss
+++ b/assets/sass/themes/_dark.scss
@@ -1,14 +1,16 @@
 $dark: (
     footer-background-color: #403E41,
     footer-color: #bdbdbd, 
-    link: #FFD866,
-    link-hover: #FF6188,
-    title-color: #ffd866,
+    link: #bed5f7,
+    link-hover: #416aff,
+    title-color: #bed5f7,
     meta-color: #FCFCFA,
     body-color: #FCFCFA,
     hr-color: #595B5C,
     body-background-color: #2D2A2E,
     backdrop-background-color: #212121,
+    summary-custom-background-color: #595B5C,
+    summary-custom-shadow-color: #000,
     dropdown-border-top-color: #424242,
     dropdown-item-active-background-color: #424242,
     dropdown-content-background-color: #595B5C,
@@ -19,17 +21,17 @@ $dark: (
     navbar-background-color: #403E41,
     navbar-mobile-background-color: #3a3a3a,
     navbar-title-color: #FCFCFA,
-    navbar-title-hover-color: #FFD866,
-    navbar-title-active-color: #FF6188,
+    navbar-title-hover-color: #bed5f7,
+    navbar-title-active-color: #416aff,
     navbar-menu-hover-background-color: lighten(#403E41, 5%),
-    navbar-dropdown-item-hover-color: #FFD866,
+    navbar-dropdown-item-hover-color: #bed5f7,
     sidebar-title-color: #aed581,
     sidebar-li-color: #FCFCFA,
     taxo-title-color: #bdbdbd,
     taxo-num-color: #FCFCFA,
     taxo-num-background-color: #212121,
     taxo-tags-background-color: lighten(#212121, 13%),
-    taxo-tags-color: #78DCE8,
+    taxo-tags-color: #95caf7,
     taxo-series-background-color: lighten(#212121, 13%),
     taxo-series-color: #EA9C77,
     taxo-categories-background-color: lighten(#212121, 13%),
@@ -60,7 +62,8 @@ $dark: (
     pagination-background-color: #212121,
     pagination-disabled-color: #757575,
     pagination-number-color: #FCFCFA,
-    terms-title-color: #727072,
+    terms-title-color: #ddd,
+    terms-title-shadow-color: #888,
     terms-tags-color: #78DCE8,
     terms-categories-color: #AB9DF2,
     terms-series-color: #EA9C77,
@@ -68,7 +71,7 @@ $dark: (
     toc-label-color: #727072,
     toc-title-color: #90a4ae,
     toc-vertical-line: #727072,
-    toc-vertical-line-active: #FF6188,
+    toc-vertical-line-active: #416aff,
     search-placeholder-color: #727072,
     search-color: #FCFCFA,
     search-icon-color: #727072,
@@ -78,20 +81,20 @@ $dark: (
     search-content-background-color: lighten(#403E41, 5%),
     search-hover-background-color: #727072,
     selection-color: #FCFCFA,
-    selection-background-color: #FF6188,
+    selection-background-color: #416aff,
     archive-key-color: #FCFCFA,
     archive-type-color: #82aaff,
     archive-meta-color: #aed581,
-    archive-key-background-color: #FF6188,
+    archive-key-background-color: #416aff,
     archive-type-background-color: #424242,
-    archive-hover-line-color: #FF6188,
+    archive-hover-line-color: #416aff,
     gtt-color: #bdbdbd,
     gtt-background-color: #403E41,
     gtt-hover-color: #82aaff,
     gtt-hover-background-color: lighten(#403E41, 5%),
     switch-background-color: #403E41,
     switch-button-color: #FCFCFA,
-    switch-active-color: #FF6188,
+    switch-active-color: #416aff,
     gallery-mask-color: #FCFCFA,
     gallery-mask-background-color: rgba(0, 0, 0, 0.7),
 );
