--- a/layouts/partials/sidebar/sidebar-home.html
+++ b/layouts/partials/sidebar/sidebar-home.html
@@ -3,7 +3,7 @@
     {{ partial "search/site-search" . }}
     {{ partial "sidebar/site-bio" . }}    
     {{ partial "sidebar/custom-home" . }}
-
+	<!--
     {{ range (and (where .Site.Sections "Type" "!=" "about") (where .Site.Sections "Type" "!=" "archive")) }}
     <section class="sidebar-recent">
         <a href="{{ .RelPermalink }}" class="sidebar-recent__title p2">{{ .Title }}</a>
@@ -17,14 +17,13 @@
         </ul>
     </section>
     {{ end }}
+	-->
 </div>
-
-<hr class="hr-fade sidebar-hr" />
+<!--<hr class="hr-fade sidebar-hr" />-->
 <div class="taxo-root">
 {{ partial "taxonomy/taxonomy-tags" . }}
 {{ partial "taxonomy/taxonomy-categories" . }}
 {{ partial "taxonomy/taxonomy-series" . }}
 </div>
-<hr class="hr-fade sidebar-hr" />
-
+<!--<hr class="hr-fade sidebar-hr" />-->
 {{ end }}
