--- a/assets/sass/components/_taxo.scss
+++ b/assets/sass/components/_taxo.scss
@@ -1,5 +1,4 @@
 .taxo {
-  margin: 2.5rem 0;
   z-index: z('taxo');
 
   &-root {
@@ -39,13 +38,14 @@
   }
 
   &__num {
-    padding: 0.125rem 0.25rem;
+    padding: 0 0.25rem;
+    margin: 2px 2px 2px 0;
     border-top-right-radius: 0.175rem;
-    border-bottom-right-radius: 0.175rem;    
+    border-bottom-right-radius: 0.175rem;
 
     @include themify($themes) {
       color: themed('taxo-num-color');
-      background-color: themed('taxo-num-background-color');    
+      background-color: themed('body-background-color');
     }
   }
 
