--- a/assets/sass/layout/_grid.scss
+++ b/assets/sass/layout/_grid.scss
@@ -37,6 +37,10 @@ $grid_column_gap: $grid_column_gap_width + $grid_column_gap_unit;
     grid-area: 3 / 2 / 4 / 3;
 }
 
+.main-above {
+    grid-area: 2 / 1 / 3 / 3;
+}
+
 .main {
     grid-area: 3 / 1 / 4 / 3;
 }
