--- a/assets/sass/themes/_light.scss
+++ b/assets/sass/themes/_light.scss
@@ -1,14 +1,16 @@
 $light: (
     footer-background-color: #eeeeee,
     footer-color: #424242,  
-    link: #607d8b,
-    link-hover: #FF6188,
-    title-color: #607d8b,
+    link: #4d7292,
+    link-hover: #078cff,
+    title-color: #4d7292,
     meta-color: #424242,
     body-color: #424242,
     hr-color: #ccc,
     body-background-color: #fafafa,
     backdrop-background-color: #e0e0e0,
+    summary-custom-background-color: #eee,
+    summary-custom-shadow-color: #777,
     dropdown-border-top-color: #e0e0e0,    
     dropdown-item-active-background-color: #e0e0e0,
     dropdown-content-background-color: #fafafa,
@@ -19,16 +21,16 @@ $light: (
     navbar-background-color: #eaeaea,
     navbar-mobile-background-color: #f1f1f1,
     navbar-title-color: #555,
-    navbar-title-hover-color: #607d8b,
-    navbar-title-active-color: #FF6188,
+    navbar-title-hover-color: #4d7292,
+    navbar-title-active-color: #078cff,
     navbar-menu-hover-background-color: lighten(#eeeeee, 3%),
-    navbar-dropdown-item-hover-color: #607d8b,
+    navbar-dropdown-item-hover-color: #4d7292,
     sidebar-title-color: #424242,
     sidebar-li-color: #424242,
-    taxo-title-color: #607d8b,
+    taxo-title-color: #4d7292,
     taxo-num-color: #424242,
     taxo-num-background-color: #eaeaea,
-    taxo-tags-background-color: darken(#e0f7fa, 3%),
+    taxo-tags-background-color: #e7eef5,
     taxo-tags-color: #424242,
     taxo-series-background-color: darken(#fff3e0, 3%),
     taxo-series-color: #424242,
@@ -43,10 +45,10 @@ $light: (
     single-hr-background-color: #bdbdbd,
     single-blockquote-border-color: #bdbdbd,
     single-header-title-color: #424242,
-    single-contents-title-color: #607d8b,
+    single-contents-title-color: #4d7292,
     related-header-title-color: #424242,
-    related-link-color: #607d8b,   
-    content-pre-main-color: #607d8b,
+    related-link-color: #4d7292,   
+    content-pre-main-color: #4d7292,
     content-pre-color: #344952,
     content-pre-number-color: #aaa,
     content-pre-background-color: #F5F2F0,
@@ -60,7 +62,8 @@ $light: (
     pagination-background-color: #eeeeee,
     pagination-disabled-color: #bdbdbd,
     pagination-number-color: #757575,
-    terms-title-color: #9e9e9e,
+    terms-title-color: #777,
+    terms-title-shadow-color: #bbb,
     terms-tags-color: #424242,
     terms-categories-color: #424242,
     terms-series-color: #424242,
@@ -68,7 +71,7 @@ $light: (
     toc-label-color: #727072,
     toc-title-color: #727072,
     toc-vertical-line: #727072,
-    toc-vertical-line-active: #FF6188,
+    toc-vertical-line-active: #078cff,
     search-placeholder-color: #bdbdbd,
     search-color: #424242,
     search-icon-color: #bdbdbd,
@@ -78,20 +81,20 @@ $light: (
     search-content-background-color: #eeeeee,
     search-hover-background-color: darken(#eeeeee, 10%),
     selection-color: #FCFCFA,
-    selection-background-color: #FF6188,
+    selection-background-color: #078cff,
     archive-key-color: #FCFCFA,
     archive-meta-color: #424242,
     archive-type-color: darken(#bdbdbd, 40%),
-    archive-key-background-color: #607d8b,
+    archive-key-background-color: #4d7292,
     archive-type-background-color: #bdbdbd,
-    archive-hover-line-color: #FF6188,
+    archive-hover-line-color: #078cff,
     gtt-color: #424242,
     gtt-background-color: #eeeeee,
-    gtt-hover-color: #607d8b,
+    gtt-hover-color: #4d7292,
     gtt-hover-background-color: darken(#eeeeee, 10%),
     switch-background-color: #bdbdbd,
     switch-button-color: #FCFCFA,
-    switch-active-color: #FF6188,
+    switch-active-color: #078cff,
     gallery-mask-color: #424242,
     gallery-mask-background-color: rgba(255, 255, 255, 0.7),
 );
