--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,23 +8,31 @@
   {{ partial "body/breadcrumb" . }}
   {{ end }}
   <div class="single">
-    <h2 class="single__title">{{ .Title }}</h2>
+    <div class="single__header">
+      {{ if .Params.featured_image }}
+        {{ partial "imglazy" (dict "path" .Params.featured_image "class" "single__featured_image") }}
+      {{ else }}
+      <div style="min-height:60px">
+      </div>
+      {{ end }}
+      <h2 class="single__title">{{ .Title }}</h2>
+    </div>
     <div class="single__meta">
-      {{ partial "body/infos" . }}
+      <!--{{ partial "body/infos" . }}-->
       {{ partial "body/tags" . }}
-    </div>    
+    </div>
     <article class="single__contents">
       {{ .Content }}
     </article>
     {{ partial "body/donation" . }}
     {{ partial "body/whoami" . }}
-    {{ partial "body/related" . }}
-    {{ partial "pagination/pagination-single" . }}
+    <!--{{ partial "body/related" . }}-->
+    <!--{{ partial "pagination/pagination-single" . }}-->
     {{ partial "comments/comments.html" . }}
     {{ partial "body/photoswipe" . }}
 
     <div class="hide">
-    {{ partial "search/site-search" . }}
+      {{ partial "search/site-search" . }}
     </div>
   </div>
 </main>
@@ -37,11 +45,11 @@
 <script>
   enquire.register("screen and (max-width: 769px)", {
     match: function () {
-      if (document.getElementsByTagName('main')[0]) {
+	  if (document.getElementsByTagName('main')[0]) {
         document.getElementsByTagName('main')[0].className = "main";
       }
       if (document.getElementsByTagName('aside')[0]) {
-        document.getElementsByTagName('aside')[0].className = "hide";
+        document.getElementsByTagName('aside')[0].className = "main-above";
       }
     },
     unmatch: function () {
@@ -53,7 +61,9 @@
       }
       document.getElementsByClassName('navbar__burger')[0].classList.remove('is-active');
       document.getElementsByClassName('navbar__menu')[0].classList.remove('is-active');
-      document.getElementsByClassName('mobile-search')[0].classList.add('hide');
+	  if (document.getElementsByClassName('mobile-search')[0]) {
+        document.getElementsByClassName('mobile-search')[0].classList.add("main-side");
+      }
     },
     setup: function () { },
     deferSetup: true,
