--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 {{ $title := .Title }}
 <header class="header">
-  <h3 class="h3 terms__title">{{ $title }}</h3>
+  <h3 class="h3 terms__title">{{ i18n (print "taxo-" (lower .Title)) }}</h3>
 </header>
 <main class="terms main">  
   <div class="terms__list">
