--- a/layouts/partials/sidebar/sidebar-single.html
+++ b/layouts/partials/sidebar/sidebar-single.html
@@ -1,7 +1,7 @@
 {{ if $.Param "enableSidebar" }}
-{{ if $.Param "enableToc" }}
 
-<section class="sidebar">
+<section class="sidebar sidebar-single">
+  {{ if $.Param "enableToc" }}
   <div class="toc__flexbox">
     <h6 class="toc__title">{{ i18n "toc-label" }}</h6>
     {{ if $.Param "enableTocSwitch" }}
@@ -14,7 +14,33 @@
   <div class="toc">
     <ul id="toc"></ul>
   </div>
+  {{ end }}
+  <div class="sidebar__buttons">
+    {{ if .Params.play_on_android }}
+    <a class="sidebar__play_on_button" href='{{ .Params.play_on_android }}'>
+    <img alt='Get it on Google Play' src={{ (resources.Get ("images/projects/play_on_android.png" | relLangURL)).Permalink }}/>
+    </a>
+    {{ end }}
+    {{ if .Params.play_on_itchio }}
+    <a class="sidebar__play_on_button" href='{{ .Params.play_on_itchio }}'>
+    <img alt='Play on itch.io' src={{ (resources.Get ("images/projects/play_on_itchio.png" | relLangURL)).Permalink }}/>
+    </a>
+    {{ end }}
+    {{ if .Params.play_on_kongregate }}
+    <a class="sidebar__play_on_button" href='{{ .Params.play_on_kongregate }}'>
+    <img alt='Play on KONGREGATE' src={{ (resources.Get ("images/projects/play_on_kongregate.png" | relLangURL)).Permalink }}/>
+    </a>
+    {{ end }}
+    {{ if .Params.link_to_curseforge }}
+    <a class="sidebar__play_on_button" href='{{ .Params.link_to_curseforge }}'>
+    <img alt='Download from CurseForge' src={{ (resources.Get ("images/projects/link_to_curseforge.png" | relLangURL)).Permalink }}/>
+    </a>
+    {{ end }}
+    {{ if .Params.view_on_github }}
+    <a class="sidebar__play_on_button" href='{{ .Params.view_on_github }}'>
+    <img alt='View on GitHub' src={{ (resources.Get ("images/projects/view_on_github.png" | relLangURL)).Permalink }}/>
+    </a>
+    {{ end }}
+  </div>
 </section>
-
-{{ end }}
 {{ end }}
