added Patreon button

--- a/layouts/partials/footer/links-social.html
+++ b/layouts/partials/footer/links-social.html
@@ -10,5 +10,11 @@
     {{ end }}
     {{ partial "footer/links-feed.html" . }}
   </div>
+  
+  {{ if .Site.Params.donationOptions.patreon }}
+  <div class="footer__patreon">
+    <a href="{{ .Site.Params.donationOptions.patreon }}" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
+  </div>
+  {{ end }}
 </div>
 {{ end }}
