--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -9,8 +9,14 @@
 
   &__social {
     padding: 0.5rem 0;
-    position: -webkit-sticky;
-    position: sticky;
+    bottom: 70px;
+    
+    @include flexbox();
+    @include justify-content(center);
+  }
+  
+  &__patreon {
+    margin: auto 0 auto 1rem;
     bottom: 70px;
     
     @include flexbox();
@@ -114,10 +120,10 @@
     }
   }
 
-  .select-theme {    
-    &__label {      
+  .select-theme {
+    &__label {
       color: inherit;
-      text-transform: capitalize;            
+      text-transform: capitalize;
     }
 
     &__item {
@@ -133,16 +139,16 @@
   }
 
   .social {
-    margin: 0.25rem;
+    margin: 0.2rem 0 -0.2rem;
     a {
-      @include themify($themes) {        
+      @include themify($themes) {
         text-decoration: none;
         color: themed('social-icon-color');
         &:hover {
           color: themed('social-icon-hover-color');
           transition: color 0.2s ease;
-        }        
-      }   
+        }
+      }
     }
   }
 
