--- a/layouts/partials/navbar/site-nav.html
+++ b/layouts/partials/navbar/site-nav.html
@@ -23,10 +23,17 @@
   <div class="navbar__menu">
     {{ partial "navbar/select-theme" . }}
 	  {{ partial "navbar/switch-theme" . }}
+    {{ $current := . }}
     {{ range .Site.Menus.main -}}
+    
+    {{ $active := or ($current.IsMenuCurrent "main" .) ($current.HasMenuCurrent "main" .) }}
+    {{ $active = or $active (eq .Name $current.Title) }}
+    {{ $active = or $active (eq (lower .URL) (lower $current.Title)) }}
+    {{ $active = or $active (eq (lower .URL) (lower $current.Type)) }}
+    
     {{ if .HasChildren }}
     <div class="navbar__dropdown navbar__slide-down">
-      <a href="{{ .URL | relLangURL }}" class="navbar__menu-item">
+      <a href="{{ .URL | relLangURL }}" class="navbar__menu-item {{ if $active }}active{{ end }}">
         {{ safeHTML .Name }}
         <span class="navbar__menu-icon">
           {{ partial "svgs/arrow/keyboard-arrow-down.svg" (dict "width" 18 "height" 18) }}
@@ -39,7 +46,7 @@
       </div>
     </div>
     {{ else }}
-    <a href="{{ .URL | relLangURL }}" class="navbar__menu-item navbar__slide-down" data-localizedname="{{ .Identifier }}">{{ safeHTML .Name }}</a>
+    <a href="{{ .URL | relLangURL }}" class="navbar__menu-item navbar__slide-down {{ if $active }}active{{ end }}">{{ safeHTML .Name }}</a>
     {{ end }}
     {{ end }}
   </div>
